--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,19 +2,16 @@ name: CI
 
 on:
 push:
-branches: [ main ] # O workflow será executado em cada "push" na branch
-"main".
+branches: [ main ]
 pull_request:
-branches: [ main ] # O workflow será executado em cada "pull request"
-direcionado à branch "main".
+branches: [ main ] 
 
 jobs:
 build:
-runs-on: ubuntu-latest # Define o sistema operacional para executar o workflow.
+runs-on: ubuntu-latest 
 
 steps:
-- uses: actions/checkout@v3 # Faz o "checkout" do código do repositório para a
-máquina virtual.
+- uses: actions/checkout@v3 
 
 - name: Executar testes
 run: |
@@ -22,11 +19,11 @@ echo "Nenhum teste implementado ainda. Adicione testes em script.js!"
 echo "Podemos adicionar testes com Jest ou Cypress no futuro."
 echo "Testes simulados aprovados"
 
-exit 0 # Simula testes passando
+exit 0 
 
 - name: Deploy para GitHub Pages
-if: github.ref == 'refs/heads/main' # Só executa o deploy quando o commit for
+if: github.ref == 'refs/heads/main' 
 na branch main.
 uses: actions/deploy-pages@v2
 with:
-folder: . # Diretório a ser deployado (raiz do repositório neste caso)
+folder: . 
