--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,32 +2,36 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
   contents: read
   pages: write
-  id-token: write  # ESSENCIAL pro deploy funcionar
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do código
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Rodar testes simulados
+      - name: Executar testes simulados
         run: |
           echo "Nenhum teste implementado ainda. Adicione testes em script.js!"
-          echo "Testes simulados aprovados"
-          exit 0
+          echo "Podemos adicionar testes com Jest ou Cypress no futuro."
+          echo "Testes simulados aprovados."
 
-      - name: Upload do artifact para Pages
-        uses: actions/upload-pages-artifact@v2
+      - name: Fazer upload dos artefatos para o GitHub Pages
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: . # Altere para o diretório de saída, se aplicável
 
   deploy:
     needs: build
@@ -35,12 +39,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
-    permissions:
-      pages: write
-      id-token: write
-
     steps:
-      - name: Deploy para GitHub Pages
+      - name: Implantar no GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
