--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,3 +1,5 @@
+# .github/workflows/deploy.yml
+
 name: Deploy com Peaceiris
 
 on:
@@ -22,4 +24,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .  # ou dist/ se usar ferramentas de build
+          publish_dir: .
