--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,3 @@
-# .github/workflows/deploy.yml
-
 name: Deploy com Peaceiris
 
 on:
@@ -17,8 +15,8 @@ jobs:
 
       - name: Rodar testes simulados
         run: |
-          echo "Nenhum teste implementado ainda. Adicione testes em script.js!"
-          echo "Testes simulados aprovados"
+          echo "🧪 Testes simulados rodando..."
+          echo "✅ Tudo OK para deploy!"
 
       - name: Deploy no GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
