--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,20 +16,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout do repositório
+        uses: actions/checkout@v3
 
-      - name: Executar testes
+      - name: Executar testes simulados
         run: |
           echo "Nenhum teste implementado ainda. Adicione testes em script.js!"
           echo "Podemos adicionar testes com Jest ou Cypress no futuro."
           echo "Testes simulados aprovados"
-          exit 0 # Simula testes passando
+          exit 0
 
-      - name: Upload artifacts
+      - name: Upload de artefatos para GitHub Pages
         uses: actions/upload-pages-artifact@v2
         with:
-          path: . # Diretório a ser deployado (raiz do repositório neste caso)
+          path: . # Diretório que será enviado (raiz do projeto)
 
-      - name: Deploy para GitHub Pages
-        if: github.ref == 'refs/heads/main'
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Deploy para o GitHub Pages
         uses: actions/deploy-pages@v2
