--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,30 +16,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # ⚠️ Solução temporária para o bug: adicionando upload-artifact manualmente
-      - name: Baixar a ação upload-artifact (workaround)
-        uses: actions/upload-artifact@v3
-
-      - name: Executar testes simulados
+      - name: Executar testes
         run: |
           echo "Nenhum teste implementado ainda. Adicione testes em script.js!"
           echo "Podemos adicionar testes com Jest ou Cypress no futuro."
           echo "Testes simulados aprovados"
-          exit 0
+          exit 0 # Simula testes passando
 
-      - name: Upload de artefatos para GitHub Pages
+      - name: Upload artifacts
         uses: actions/upload-pages-artifact@v2
         with:
-          path: . # ou ./dist, se for esse o diretório gerado
+          path: . # Diretório a ser deployado (raiz do repositório neste caso)
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Deploy para o GitHub Pages
+      - name: Deploy para GitHub Pages
+        if: github.ref == 'refs/heads/main'
         uses: actions/deploy-pages@v2
